--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "vue": "^2.5.2",
+    "vue-baidu-map": "^0.21.11",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
