--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
+    "element-ui": "^2.4.6",
     "vue": "^2.5.2",
     "vue-baidu-map": "^0.21.11",
+    "vue-clickoutside": "^0.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
